--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -1,49 +1,13 @@
 .contact {
-  .header {
-    &__img {
-      position: relative;
-    }
-    .white-box {
-      padding: 22.5px 0;
-      background-color: var(--color-white);
-      width: 343px;
-      position: absolute;
-      bottom: 0.5px;
-    }
-
-    @include breakpoint(sm) {
-      .container {
-        background: url('../images/contact/tablet/image-hero.jpg') no-repeat;
-        background-size: cover;
-        padding: 18rem 0 0 3.625rem;
-        position: relative;
-      }
-      .header__content {
-        padding: 5.5rem 0 0 3.6875rem;
-        background: var(--color-white);
-      }
-      h1 {
-          position: absolute;
-          right: 0;
-          top: 14.6875rem;
-         }
-    }
-
-    @include breakpoint(lg) {
-      .container {
-        padding: 13.5625rem 0 0 30.125rem;
-        background-size: 40rem; //creates illusion that image is in the shape of the letter 'r'
+   .header-card {
+      @include breakpoint(sm) {
+         --bg-img-url: url('../images/contact/tablet/image-hero.jpg');
       }
 
-      h1 {
-      top: 8.125rem;
+      @include breakpoint(lg) {
+         --bg-img-url: url('../images/contact/desktop/image-hero.jpg');
       }
-
-      .header__content {
-        padding: 10rem 0 0 11.375rem;
-      }
-    }
-  }
+   }
 
   // Contact Details Section
   .details {
