--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -64,9 +64,7 @@
 
 
 // WELCOME SECTION
-
 .welcome {
-
   .text-component {
     --text-vspace-multiplier: 2.4;
     h2 {
@@ -74,45 +72,38 @@
     }
   }
 
-  p {
-    color: var(--color-primary-light);
-  }
-
   @include breakpoint(sm) {
-
-    &__main {
-      padding-top: 50px;
-    }
-
     h1 {
       position: absolute;
-      top: -5.5rem;
+      top: -7.5rem;
       left: 0;
     }
 
-    .text-component {
-      h2 {
-        --text-vspace-multiplier: 4;
-      }
+    .text-component h2 {
+      --text-vspace-multiplier: 4;
     }
   }
 
   @include breakpoint(md) {
-    &__main{
-      background: url(../images/home/desktop/image-welcome.jpg) no-repeat;
-      background-position: right center;
-      background-size: auto 100%;
-      padding: 105px 0 0 189px;
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr 21.875rem;
     }
 
+    h1 {top: -5.5rem;}
+
     .text-component {
+      justify-self: center;
+      margin-top: var(--space-xxl);
+      margin-left: 60px;
       --text-vspace-multiplier: 1.2;
-      p {
-        max-width: var(--paragraph-width);
-      }
-      h2 {
-        --text-vspace-multiplier: 2.4;
-      }
+      h2 { --text-vspace-multiplier: 2.4;}
+      p {max-width: var(--paragraph-width);}
+    }
+    &__img {
+      background: url(../images/home/desktop/image-welcome.jpg) no-repeat;
+      background-position: right center;
+      background-size: cover;
     }
   }
 }
