code to create similar styles  for heritage and welcome sections

--- a/main/assets/css/components/_header_card.scss
+++ b/main/assets/css/components/_header_card.scss
@@ -2,7 +2,7 @@
   --bg-img-url: url('../images/about/tablet/image-hero.jpg');
 
     &__img {
-    position: relative;
+    position: relative; //for white box
   }
 
   .white-box {
