--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -145,9 +145,7 @@
     .btn {flex-grow: 1;}
 
     @include breakpoint(sm) {
-      .btn {
-        flex-grow: 0;
-      }
+      .btn {flex-grow: 0;}
     }
 
     // PROJECT CARDS
